kubernetes/apps/network/external-services/files/endpoints.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: &app files
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
subsets:
  - addresses:
      - ip: "${NAS_ADDRESS}"
    ports:
      - name: http
        port: 7001
        protocol: TCP
