kubernetes/apps/network/external-services/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app files
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  clusterIP: None
  ports:
    - name: https
      port: &port 7001
      protocol: TCP
      targetPort: *port
  type: ClusterIP
